OO-3863: add overview of lectures in curriculum management
Allow course owner to enter curriculum management site (with reduced
permissions), add configuration in type and element to aggregate the
lecture statistics, add three levels of details about lectures (list of
users, list for a specific user with all courses, details of a user in a
course)